// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Step /> should ask for ope and licenciement eco 1`] = `
.c2 {
  position: absolute;
  background-color: #7994d4;
  border-radius: 0.6rem;
  top: 50%;
  left: 0;
  width: 0.4rem;
  height: 100%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c9 {
  color: #3e486e;
  font-size: 1.6rem;
  font-weight: 400;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.6rem;
  cursor: pointer;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c12 {
  position: relative;
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: calc(1.6rem * 1.25);
  height: calc(1.6rem * 1.25);
  margin: calc(1.6rem / 5) calc(2 * 1.6rem / 3) 0 0;
  padding: 0;
  line-height: inherit;
  background: #fff;
  border: 1px solid #bbcadf;
  border-radius: 50%;
  box-shadow: none;
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c12:before {
  position: absolute;
  top: 50%;
  left: 50%;
  display: none;
  width: calc(1.6rem / 1.5);
  height: calc(1.6rem / 1.5);
  background-color: #f66663;
  border-radius: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  content: "";
}

.c12:checked {
  background-color: #fff;
  border-color: #f66663;
}

.c12:checked:before {
  display: block;
}

.c5 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  text-align: center;
}

.c8 {
  position: absolute;
  top: 1.6rem;
  right: 1.6rem;
  width: 1.6rem;
  height: 1.6rem;
  color: #f66663;
  pointer-events: none;
}

.c7 {
  width: 100%;
  height: 5.4rem;
  padding: 0 2rem 0;
  padding-right: 5rem;
  color: #3e486e;
  font-size: 1.6rem;
  font-family: "Open Sans",sans-serif;
  vertical-align: middle;
  background-color: #fff;
  border: none;
  border-radius: 0.6rem;
  box-shadow: 0 1rem 2rem rgba(121,148,212,0.2);
  cursor: pointer;
  -webkit-transition: border-color 250ms ease;
  transition: border-color 250ms ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c7::-ms-expand {
  background-color: transparent;
  border: 0 transparent;
}

.c7 *::-ms-backdrop,
.c7 {
  padding-right: 1.6rem;
}

.c7:invalid {
  border-color: #eb5757;
}

.c7:disabled {
  background-color: #e4e8ef;
}

.c0 {
  margin-top: 3.2rem;
  margin-bottom: 2rem;
  margin-left: auto;
  text-align: left;
}

.c1 {
  position: relative;
  margin: 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
  padding-left: 3.2rem;
  text-align: left;
}

.c3 {
  display: inline-block;
  margin-top: 2rem;
  margin-bottom: 1rem;
  font-size: 1.8rem;
  font-weight: 600;
  cursor: pointer;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 2em;
  padding: 0;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 2rem;
}

.c6 {
  width: 100%;
}

@media (max-width:600px) {
  .c5 {
    width: 100%;
  }
}

@media (max-width:600px) {
  .c0 {
    margin-bottom: 1rem;
    margin-left: auto;
  }
}

@media (max-width:600px) {
  .c1 {
    padding-left: 1.6rem;
  }
}

@media (max-width:600px) {
  .c1 {
    font-size: 2.2rem;
  }
}

@media (max-width:600px) {
  .c3 {
    font-size: 1.6rem;
  }
}

<div>
  <div
    class="c0"
  >
    <h3
      class="c1"
    >
      <span
        class="c2"
      />
      Chimie
    </h3>
  </div>
  <label
    class="c3"
  >
    Quel est l’échelon du salarié ?
    <br />
    Cette information se trouve sur le bulletin de salaire.
  </label>
  <label
    class="c4"
    for="echelon"
  >
    Sélectionnez un échelon
  </label>
  <div
    class="c5 c6"
  >
    <select
      class="c7"
      id="echelon"
      name="echelon"
    >
      <option
        disabled=""
        value=""
      />
      <option
        value="130"
      >
        130
      </option>
      <option
        value="140"
      >
        140
      </option>
      <option
        value="150"
      >
        150
      </option>
      <option
        value="160"
      >
        160
      </option>
      <option
        value="175"
      >
        175
      </option>
      <option
        value="190"
      >
        190
      </option>
      <option
        value="205"
      >
        205
      </option>
      <option
        value="225"
      >
        225
      </option>
      <option
        value="235"
      >
        235
      </option>
      <option
        value="250"
      >
        250
      </option>
      <option
        value="275"
      >
        275
      </option>
      <option
        value="300"
      >
        300
      </option>
      <option
        value="325"
      >
        325
      </option>
      <option
        value="350"
      >
        350
      </option>
      <option
        value="360"
      >
        360
      </option>
      <option
        value="400"
      >
        400
      </option>
      <option
        value="460"
      >
        460
      </option>
      <option
        value="480"
      >
        480
      </option>
      <option
        value="510"
      >
        510
      </option>
      <option
        value="550"
      >
        550
      </option>
      <option
        value="660"
      >
        660
      </option>
      <option
        value="770"
      >
        770
      </option>
      <option
        value="880"
      >
        880
      </option>
    </select>
    <div
      aria-hidden="true"
      class="c8"
    >
      <svg
        aria-hidden="true"
        fill="none"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          clip-path="url(#arrow-down_svg__clip0)"
        >
          <path
            d="M8.425 11.573l7.11-6.072a.709.709 0 00.26-.537.709.709 0 00-.26-.537.973.973 0 00-.629-.223.973.973 0 00-.63.223l-6.48 5.536-6.481-5.536a.973.973 0 00-.63-.223.973.973 0 00-.628.223.708.708 0 00-.261.537c0 .202.094.395.26.537l7.11 6.072a.91.91 0 00.29.165 1.021 1.021 0 00.68 0 .91.91 0 00.29-.165z"
            fill="currentColor"
          />
        </g>
        <defs>
          <clippath
            id="arrow-down_svg__clip0"
          >
            <path
              d="M0 0h16v16H0z"
              fill="currentColor"
            />
          </clippath>
        </defs>
      </svg>
    </div>
  </div>
  <label
    class="c3"
  >
    Est-ce que l'entreprise est affiliée à une des organisations patronales employeur ?
    <span
      class="c9"
    >
       (obligatoire)
    </span>
  </label>
  <div
    class="c10"
  >
    <div
      class="c11"
    >
      <input
        class="c12"
        id="hasOpe-oui"
        name="hasOpe"
        type="radio"
        value="true"
      />
      <label
        class="c13"
        for="hasOpe-oui"
      >
        Oui
      </label>
    </div>
    <div
      class="c11"
    >
      <input
        class="c12"
        id="hasOpe-non"
        name="hasOpe"
        type="radio"
        value="false"
      />
      <label
        class="c13"
        for="hasOpe-non"
      >
        Non
      </label>
    </div>
  </div>
  <label
    class="c3"
  >
    Le motif du licenciement est-il économique ?
    <span
      class="c9"
    >
       (obligatoire)
    </span>
  </label>
  <div
    class="c10"
  >
    <div
      class="c11"
    >
      <input
        class="c12"
        id="isEco-oui"
        name="isEco"
        type="radio"
        value="true"
      />
      <label
        class="c13"
        for="isEco-oui"
      >
        Oui
      </label>
    </div>
    <div
      class="c11"
    >
      <input
        class="c12"
        id="isEco-non"
        name="isEco"
        type="radio"
        value="false"
      />
      <label
        class="c13"
        for="isEco-non"
      >
        Non
      </label>
    </div>
  </div>
</div>
`;

exports[`<Step /> should ask for ope and licenciement eco and age 1`] = `
.c2 {
  position: absolute;
  background-color: #7994d4;
  border-radius: 0.6rem;
  top: 50%;
  left: 0;
  width: 0.4rem;
  height: 100%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c9 {
  color: #3e486e;
  font-size: 1.6rem;
  font-weight: 400;
}

.c15 {
  position: relative;
  display: inline-block;
}

.c16 {
  width: 100%;
  height: 5.4rem;
  padding: 0 2rem;
  padding-right: 2rem;
  color: #3e486e;
  font-weight: normal;
  font-size: 1.6rem;
  font-family: "Open Sans",sans-serif;
  font-style: normal;
  line-height: inherit;
  text-align: left;
  background: #fff;
  border: 1px solid transparent;
  border-color: transparent;
  border-radius: 0.6rem;
  box-shadow: 0 1rem 2rem rgba(121,148,212,0.2);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c16::-webkit-outer-spin-button,
.c16::-webkit-inner-spin-button {
  margin: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c16::-webkit-calendar-picker-indicator {
  display: block;
  width: 3.2rem;
  height: 3.2rem;
  margin-right: -2rem;
  color: rgba(0,0,0,0);
  background-color: #9298af;
  cursor: pointer;
  opacity: 1;
  -webkit-mask-image: url("data:image/svg+xml;,%3Csvg%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%2032%2032%22%3E%3Cpath%20fill-rule%3D%22evenodd%22%20clip-rule%3D%22evenodd%22%20d%3D%22M20.947%207.601h1.601c1.472%200%202.521%201.198%202.521%202.669v2.306l-.001%2010.392c0%201.472-1.049%202.669-2.521%202.669H8.669A2.672%202.672%200%20016%2022.967l.001-12.697a2.672%202.672%200%20012.67-2.669h1.331V6h.999v1.601H20V6h.947v1.601zm1.6%2017.036c.883%200%201.454-.786%201.454-1.67v-10.33h-17L7%2022.967c0%20.884.785%201.67%201.668%201.67h13.879zm-15.548-13h17.002l.001-1.367c0-.883-.57-1.601-1.453-1.601h-1.6v1.068H20V8.669h-9v1.068h-1V8.669H8.669C7.786%208.669%207%209.387%207%2010.27v1.367zm9.677%206.277h-2.135a1.07%201.07%200%2001-1.068-1.068v-2.135a1.07%201.07%200%20011.068-1.068h2.135a1.07%201.07%200%20011.068%201.068v2.135a1.07%201.07%200%2001-1.068%201.068zm0-3.203h-2.135v2.135h2.136v-2.135zm3.203%203.203h2.135a1.07%201.07%200%20001.068-1.068v-2.135a1.07%201.07%200%2000-1.068-1.068H19.88a1.07%201.07%200%2000-1.068%201.068v2.135a1.07%201.07%200%20001.068%201.068zm0-3.203h2.135l.001%202.135H19.88v-2.135zm-8.54%208.541H9.204a1.07%201.07%200%2001-1.068-1.068v-2.135a1.07%201.07%200%20011.068-1.068h2.135a1.07%201.07%200%20011.068%201.068v2.135a1.07%201.07%200%2001-1.068%201.068zm0-3.203H9.204v2.135h2.136l-.001-2.135zm3.202%203.203h2.135a1.07%201.07%200%20001.068-1.068v-2.135a1.07%201.07%200%2000-1.068-1.068h-2.135a1.07%201.07%200%2000-1.068%201.068v2.135a1.07%201.07%200%20001.068%201.068zm0-3.203h2.135l.001%202.135h-2.136v-2.135zm7.473%203.203H19.88a1.07%201.07%200%2001-1.068-1.068v-2.135a1.07%201.07%200%20011.068-1.068h2.135a1.07%201.07%200%20011.068%201.068v2.135a1.07%201.07%200%2001-1.068%201.068zm0-3.203H19.88v2.135h2.136v-2.135z%22%20fill%3D%22currentColor%22%2F%3E%3C%2Fsvg%3E");
  mask-image: url("data:image/svg+xml;,%3Csvg%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%2032%2032%22%3E%3Cpath%20fill-rule%3D%22evenodd%22%20clip-rule%3D%22evenodd%22%20d%3D%22M20.947%207.601h1.601c1.472%200%202.521%201.198%202.521%202.669v2.306l-.001%2010.392c0%201.472-1.049%202.669-2.521%202.669H8.669A2.672%202.672%200%20016%2022.967l.001-12.697a2.672%202.672%200%20012.67-2.669h1.331V6h.999v1.601H20V6h.947v1.601zm1.6%2017.036c.883%200%201.454-.786%201.454-1.67v-10.33h-17L7%2022.967c0%20.884.785%201.67%201.668%201.67h13.879zm-15.548-13h17.002l.001-1.367c0-.883-.57-1.601-1.453-1.601h-1.6v1.068H20V8.669h-9v1.068h-1V8.669H8.669C7.786%208.669%207%209.387%207%2010.27v1.367zm9.677%206.277h-2.135a1.07%201.07%200%2001-1.068-1.068v-2.135a1.07%201.07%200%20011.068-1.068h2.135a1.07%201.07%200%20011.068%201.068v2.135a1.07%201.07%200%2001-1.068%201.068zm0-3.203h-2.135v2.135h2.136v-2.135zm3.203%203.203h2.135a1.07%201.07%200%20001.068-1.068v-2.135a1.07%201.07%200%2000-1.068-1.068H19.88a1.07%201.07%200%2000-1.068%201.068v2.135a1.07%201.07%200%20001.068%201.068zm0-3.203h2.135l.001%202.135H19.88v-2.135zm-8.54%208.541H9.204a1.07%201.07%200%2001-1.068-1.068v-2.135a1.07%201.07%200%20011.068-1.068h2.135a1.07%201.07%200%20011.068%201.068v2.135a1.07%201.07%200%2001-1.068%201.068zm0-3.203H9.204v2.135h2.136l-.001-2.135zm3.202%203.203h2.135a1.07%201.07%200%20001.068-1.068v-2.135a1.07%201.07%200%2000-1.068-1.068h-2.135a1.07%201.07%200%2000-1.068%201.068v2.135a1.07%201.07%200%20001.068%201.068zm0-3.203h2.135l.001%202.135h-2.136v-2.135zm7.473%203.203H19.88a1.07%201.07%200%2001-1.068-1.068v-2.135a1.07%201.07%200%20011.068-1.068h2.135a1.07%201.07%200%20011.068%201.068v2.135a1.07%201.07%200%2001-1.068%201.068zm0-3.203H19.88v2.135h2.136v-2.135z%22%20fill%3D%22currentColor%22%2F%3E%3C%2Fsvg%3E");
}

.c16:invalid {
  border-color: #eb5757;
}

.c16::-webkit-input-placeholder {
  color: #9298af;
}

.c16::-moz-placeholder {
  color: #9298af;
}

.c16:-ms-input-placeholder {
  color: #9298af;
}

.c16::placeholder {
  color: #9298af;
}

.c16:focus {
  border-color: #7994d4;
}

.c16:focus::-webkit-input-placeholder {
  color: transparent;
}

.c16:focus::-moz-placeholder {
  color: transparent;
}

.c16:focus:-ms-input-placeholder {
  color: transparent;
}

.c16:focus::placeholder {
  color: transparent;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.6rem;
  cursor: pointer;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c12 {
  position: relative;
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: calc(1.6rem * 1.25);
  height: calc(1.6rem * 1.25);
  margin: calc(1.6rem / 5) calc(2 * 1.6rem / 3) 0 0;
  padding: 0;
  line-height: inherit;
  background: #fff;
  border: 1px solid #bbcadf;
  border-radius: 50%;
  box-shadow: none;
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c12:before {
  position: absolute;
  top: 50%;
  left: 50%;
  display: none;
  width: calc(1.6rem / 1.5);
  height: calc(1.6rem / 1.5);
  background-color: #f66663;
  border-radius: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  content: "";
}

.c12:checked {
  background-color: #fff;
  border-color: #f66663;
}

.c12:checked:before {
  display: block;
}

.c5 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  text-align: center;
}

.c8 {
  position: absolute;
  top: 1.6rem;
  right: 1.6rem;
  width: 1.6rem;
  height: 1.6rem;
  color: #f66663;
  pointer-events: none;
}

.c7 {
  width: 100%;
  height: 5.4rem;
  padding: 0 2rem 0;
  padding-right: 5rem;
  color: #3e486e;
  font-size: 1.6rem;
  font-family: "Open Sans",sans-serif;
  vertical-align: middle;
  background-color: #fff;
  border: none;
  border-radius: 0.6rem;
  box-shadow: 0 1rem 2rem rgba(121,148,212,0.2);
  cursor: pointer;
  -webkit-transition: border-color 250ms ease;
  transition: border-color 250ms ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c7::-ms-expand {
  background-color: transparent;
  border: 0 transparent;
}

.c7 *::-ms-backdrop,
.c7 {
  padding-right: 1.6rem;
}

.c7:invalid {
  border-color: #eb5757;
}

.c7:disabled {
  background-color: #e4e8ef;
}

.c0 {
  margin-top: 3.2rem;
  margin-bottom: 2rem;
  margin-left: auto;
  text-align: left;
}

.c1 {
  position: relative;
  margin: 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
  padding-left: 3.2rem;
  text-align: left;
}

.c3 {
  display: inline-block;
  margin-top: 2rem;
  margin-bottom: 1rem;
  font-size: 1.8rem;
  font-weight: 600;
  cursor: pointer;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 2rem;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 2em;
  padding: 0;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 2rem;
}

.c6 {
  width: 100%;
}

@media (max-width:600px) {
  .c15 {
    width: 100%;
  }
}

@media (max-width:600px) {
  .c16 {
    padding: 0 1rem;
    padding-right: 2rem;
  }
}

@media (max-width:600px) {
  .c5 {
    width: 100%;
  }
}

@media (max-width:600px) {
  .c0 {
    margin-bottom: 1rem;
    margin-left: auto;
  }
}

@media (max-width:600px) {
  .c1 {
    padding-left: 1.6rem;
  }
}

@media (max-width:600px) {
  .c1 {
    font-size: 2.2rem;
  }
}

@media (max-width:600px) {
  .c3 {
    font-size: 1.6rem;
  }
}

<div>
  <div
    class="c0"
  >
    <h3
      class="c1"
    >
      <span
        class="c2"
      />
      Chimie
    </h3>
  </div>
  <label
    class="c3"
  >
    Quel est l’échelon du salarié ?
    <br />
    Cette information se trouve sur le bulletin de salaire.
  </label>
  <label
    class="c4"
    for="echelon"
  >
    Sélectionnez un échelon
  </label>
  <div
    class="c5 c6"
  >
    <select
      class="c7"
      id="echelon"
      name="echelon"
    >
      <option
        disabled=""
        value=""
      />
      <option
        value="130"
      >
        130
      </option>
      <option
        value="140"
      >
        140
      </option>
      <option
        value="150"
      >
        150
      </option>
      <option
        value="160"
      >
        160
      </option>
      <option
        value="175"
      >
        175
      </option>
      <option
        value="190"
      >
        190
      </option>
      <option
        value="205"
      >
        205
      </option>
      <option
        value="225"
      >
        225
      </option>
      <option
        value="235"
      >
        235
      </option>
      <option
        value="250"
      >
        250
      </option>
      <option
        value="275"
      >
        275
      </option>
      <option
        value="300"
      >
        300
      </option>
      <option
        value="325"
      >
        325
      </option>
      <option
        value="350"
      >
        350
      </option>
      <option
        value="360"
      >
        360
      </option>
      <option
        value="400"
      >
        400
      </option>
      <option
        value="460"
      >
        460
      </option>
      <option
        value="480"
      >
        480
      </option>
      <option
        value="510"
      >
        510
      </option>
      <option
        value="550"
      >
        550
      </option>
      <option
        value="660"
      >
        660
      </option>
      <option
        value="770"
      >
        770
      </option>
      <option
        value="880"
      >
        880
      </option>
    </select>
    <div
      aria-hidden="true"
      class="c8"
    >
      <svg
        aria-hidden="true"
        fill="none"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          clip-path="url(#arrow-down_svg__clip0)"
        >
          <path
            d="M8.425 11.573l7.11-6.072a.709.709 0 00.26-.537.709.709 0 00-.26-.537.973.973 0 00-.629-.223.973.973 0 00-.63.223l-6.48 5.536-6.481-5.536a.973.973 0 00-.63-.223.973.973 0 00-.628.223.708.708 0 00-.261.537c0 .202.094.395.26.537l7.11 6.072a.91.91 0 00.29.165 1.021 1.021 0 00.68 0 .91.91 0 00.29-.165z"
            fill="currentColor"
          />
        </g>
        <defs>
          <clippath
            id="arrow-down_svg__clip0"
          >
            <path
              d="M0 0h16v16H0z"
              fill="currentColor"
            />
          </clippath>
        </defs>
      </svg>
    </div>
  </div>
  <label
    class="c3"
  >
    Est-ce que l'entreprise est affiliée à une des organisations patronales employeur ?
    <span
      class="c9"
    >
       (obligatoire)
    </span>
  </label>
  <div
    class="c10"
  >
    <div
      class="c11"
    >
      <input
        class="c12"
        id="hasOpe-oui"
        name="hasOpe"
        type="radio"
        value="true"
      />
      <label
        class="c13"
        for="hasOpe-oui"
      >
        Oui
      </label>
    </div>
    <div
      class="c11"
    >
      <input
        class="c12"
        id="hasOpe-non"
        name="hasOpe"
        type="radio"
        value="false"
      />
      <label
        class="c13"
        for="hasOpe-non"
      >
        Non
      </label>
    </div>
  </div>
  <label
    class="c3"
  >
    Le motif du licenciement est-il économique ?
    <span
      class="c9"
    >
       (obligatoire)
    </span>
  </label>
  <div
    class="c10"
  >
    <div
      class="c11"
    >
      <input
        class="c12"
        id="isEco-oui"
        name="isEco"
        type="radio"
        value="true"
      />
      <label
        class="c13"
        for="isEco-oui"
      >
        Oui
      </label>
    </div>
    <div
      class="c11"
    >
      <input
        class="c12"
        id="isEco-non"
        name="isEco"
        type="radio"
        value="false"
      />
      <label
        class="c13"
        for="isEco-non"
      >
        Non
      </label>
    </div>
  </div>
  <label
    class="c3"
    for="1"
  >
    Quel était l’âge du salarié à la date du licenciement ?
    <span
      class="c9"
    >
       (obligatoire)
    </span>
  </label>
  <div
    class="c14"
  >
    <span
      class="c15"
    >
      <input
        class="c16"
        id="1"
        name="age"
        value=""
      />
    </span>
  </div>
</div>
`;

exports[`<Step /> should render 1`] = `
.c2 {
  position: absolute;
  background-color: #7994d4;
  border-radius: 0.6rem;
  top: 50%;
  left: 0;
  width: 0.4rem;
  height: 100%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c5 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  text-align: center;
}

.c8 {
  position: absolute;
  top: 1.6rem;
  right: 1.6rem;
  width: 1.6rem;
  height: 1.6rem;
  color: #f66663;
  pointer-events: none;
}

.c7 {
  width: 100%;
  height: 5.4rem;
  padding: 0 2rem 0;
  padding-right: 5rem;
  color: #3e486e;
  font-size: 1.6rem;
  font-family: "Open Sans",sans-serif;
  vertical-align: middle;
  background-color: #fff;
  border: none;
  border-radius: 0.6rem;
  box-shadow: 0 1rem 2rem rgba(121,148,212,0.2);
  cursor: pointer;
  -webkit-transition: border-color 250ms ease;
  transition: border-color 250ms ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c7::-ms-expand {
  background-color: transparent;
  border: 0 transparent;
}

.c7 *::-ms-backdrop,
.c7 {
  padding-right: 1.6rem;
}

.c7:invalid {
  border-color: #eb5757;
}

.c7:disabled {
  background-color: #e4e8ef;
}

.c0 {
  margin-top: 3.2rem;
  margin-bottom: 2rem;
  margin-left: auto;
  text-align: left;
}

.c1 {
  position: relative;
  margin: 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
  padding-left: 3.2rem;
  text-align: left;
}

.c3 {
  display: inline-block;
  margin-top: 2rem;
  margin-bottom: 1rem;
  font-size: 1.8rem;
  font-weight: 600;
  cursor: pointer;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 2em;
  padding: 0;
}

.c6 {
  width: 100%;
}

@media (max-width:600px) {
  .c5 {
    width: 100%;
  }
}

@media (max-width:600px) {
  .c0 {
    margin-bottom: 1rem;
    margin-left: auto;
  }
}

@media (max-width:600px) {
  .c1 {
    padding-left: 1.6rem;
  }
}

@media (max-width:600px) {
  .c1 {
    font-size: 2.2rem;
  }
}

@media (max-width:600px) {
  .c3 {
    font-size: 1.6rem;
  }
}

<div>
  <div
    class="c0"
  >
    <h3
      class="c1"
    >
      <span
        class="c2"
      />
      Chimie
    </h3>
  </div>
  <label
    class="c3"
  >
    Quel est l’échelon du salarié ?
    <br />
    Cette information se trouve sur le bulletin de salaire.
  </label>
  <label
    class="c4"
    for="echelon"
  >
    Sélectionnez un échelon
  </label>
  <div
    class="c5 c6"
  >
    <select
      class="c7"
      id="echelon"
      name="echelon"
    >
      <option
        disabled=""
        value=""
      />
      <option
        value="130"
      >
        130
      </option>
      <option
        value="140"
      >
        140
      </option>
      <option
        value="150"
      >
        150
      </option>
      <option
        value="160"
      >
        160
      </option>
      <option
        value="175"
      >
        175
      </option>
      <option
        value="190"
      >
        190
      </option>
      <option
        value="205"
      >
        205
      </option>
      <option
        value="225"
      >
        225
      </option>
      <option
        value="235"
      >
        235
      </option>
      <option
        value="250"
      >
        250
      </option>
      <option
        value="275"
      >
        275
      </option>
      <option
        value="300"
      >
        300
      </option>
      <option
        value="325"
      >
        325
      </option>
      <option
        value="350"
      >
        350
      </option>
      <option
        value="360"
      >
        360
      </option>
      <option
        value="400"
      >
        400
      </option>
      <option
        value="460"
      >
        460
      </option>
      <option
        value="480"
      >
        480
      </option>
      <option
        value="510"
      >
        510
      </option>
      <option
        value="550"
      >
        550
      </option>
      <option
        value="660"
      >
        660
      </option>
      <option
        value="770"
      >
        770
      </option>
      <option
        value="880"
      >
        880
      </option>
    </select>
    <div
      aria-hidden="true"
      class="c8"
    >
      <svg
        aria-hidden="true"
        fill="none"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          clip-path="url(#arrow-down_svg__clip0)"
        >
          <path
            d="M8.425 11.573l7.11-6.072a.709.709 0 00.26-.537.709.709 0 00-.26-.537.973.973 0 00-.629-.223.973.973 0 00-.63.223l-6.48 5.536-6.481-5.536a.973.973 0 00-.63-.223.973.973 0 00-.628.223.708.708 0 00-.261.537c0 .202.094.395.26.537l7.11 6.072a.91.91 0 00.29.165 1.021 1.021 0 00.68 0 .91.91 0 00.29-.165z"
            fill="currentColor"
          />
        </g>
        <defs>
          <clippath
            id="arrow-down_svg__clip0"
          >
            <path
              d="M0 0h16v16H0z"
              fill="currentColor"
            />
          </clippath>
        </defs>
      </svg>
    </div>
  </div>
</div>
`;
